# SteamAutoCracker

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/core/: AppIdResolver.hpp  AutoCracker.hpp  Config.hpp  WebClient.hpp
include/ui/: MainWindow.hpp
src/: main.cpp
src/core/: AppIdResolver.cpp  AutoCracker.cpp
src/ui/: MainWindow.cpp
tools/sac_emu/dlc_creamapi/: config_override.ini
tools/sac_emu/dlc_creamapi/files/: cream_api.ini
tools/sac_emu/game_ali213/files/: SteamConfig.ini
